# MiniMind-Lab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT.md  README.md  README_NEW.md  config.yaml  eval_llm.py  pyproject.toml  requirements.txt
dataset/: data_loader.py  data_processor.py  lm_dataset.py
docs/: 1_数据准备与智能配置.md  2_训练流程.md  3_企业级基础设施.md  4_部署指南.md  5_API参考.md  MiniMind-Lab_完整操作指南.md
model/: model_minimind.py
notebooks/: training_monitor.ipynb
scripts/: auto_config.py
tests/: test_config.py  test_logger.py  test_model.py
trainer/: __init__.py  checkpoint.py  cli.py  config.py  config_defaults.yaml  exceptions.py  logger.py  metrics.py  train_agent.py  train_distillation.py  train_dpo.py  train_full_sft.py  train_grpo.py  train_lora.py  train_ppo.py  train_pretrain.py  trainer_utils.py  training_loop.py
